# automaton-auditor

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
audit/: report_TRP1-Automatos-Auditor.md  test_report.md
audit/report_onpeer_generated/: audit.md
audit/report_onself_generated/: audit.md
reports/: final_report.md  interim_report.html
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
